tests/samples/invalid/empty_char.pn
fn main() -> u8
{
	var x: char8 = '';
	return: x as u8
}
